@@ -4,6 +4,7 @@
 	  This is different per system or distribution, usually, running the
 	  script under the same username as the server uses suffices.
 	  i.e.  sudo -u unbound unbound-control-setup
+	- testset port to vista/mingw.
 
 21 November 2008: Wouter
 	- fixed tcp accept, errors were printed when they should not.
